# shuttle-template-hyper

./: CONTRIBUTING.md  Cargo.toml  README.md  Shuttle.toml
src/: main.rs
src/lib/: actors.rs  errors.rs  init.rs  lib.rs  middleware.rs  service.rs  state.rs  types.rs  utilities.rs
src/lib/actors/: analytics.rs  mod.rs  ping.rs
src/lib/routes/: count.rs  echo.rs  health.rs  metrics.rs  mod.rs  ping.rs  router.rs  router_table.rs
tests/api/: analytics.rs  count.rs  echo.rs  health.rs  helpers.rs  main.rs  ping.rs
