# shuttle-hyper-template Cargo.toml definition
[package]
name = "shuttle-hyper-template"
version = "0.5.1"
edition = "2021"
authors = ["Jeffery D. Mitchell", "<sentinel1909@jeff-mitchell.dev>"]
description = "A template server, built with Hyper and Tokio"
readme = "README.md"
repository = "https://github.com/sentinel1909/shuttle-template-hyper.git"
license = "MIT"
publish = false

# binary definition
[[bin]]
name = "shuttle-hyper-template"
path = "src/bin/main.rs"

# library definition
[lib]
name = "shuttle_hyper_template_lib"
path = "src/lib/lib.rs"

# package dependences
[dependencies]
http-body-util = "0.1.2"
hyper = { version = "1.5.2", features = [ "http1", "server" ] }
hyper-util = { version = "0.1.10", features = [ "full" ] }
shuttle-runtime = "0.49.0"
tokio = { version = "1", features = [ "net" ] }
tracing = "0.1.41"
