# shuttle-hyper-template Cargo.toml definition
[package]
name = "shuttle-hyper-template"
version = "0.14.0"
edition = "2024"
authors = ["Jeffery D. Mitchell", "<crusty-rustacean@jeff-mitchell.dev>"]
description = "A template server, built with Hyper and Tokio"
readme = "README.md"
repository = "https://github.com/sentinel1909/shuttle-template-hyper.git"
license = "MIT"
publish = false

# binary definition
[[bin]]
name = "shuttle-hyper-template"
path = "src/bin/main.rs"

# library definition
[lib]
name = "shuttle_hyper_template_lib"
path = "src/lib/lib.rs"

# package dependences
[dependencies]
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["http1", "server"] }
hyper-util = { version = "0.1.11", features = ["full"] }
matchit = "0.8.6"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
shuttle-runtime = "0.53.0"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["net"] }
tracing = "0.1.41"

[dev-dependencies]
reqwest = "0.12.15"
